--- a/index.html
+++ b/index.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Ad</title>
 </head>
 <body>
+<script>
+(async () => {
+  const zone = 'DEEPGAINGAIN1-CRYPTO-GITHUB-IO_ADZONE1_728X90';
+  const res = await fetch('https://highpay-ads.com/serve/' + zone);
+  const html = await res.text();
+  if (res.ok && html) {
+    document.write(html);
+  }
+})();
+</script><script>
+(async () => {
+  const zone = 'DEEPGAINGAIN1-CRYPTO-GITHUB-IO_ADZONE1_728X90';
+  const res = await fetch('https://highpay-ads.com/serve/' + zone);
+  const html = await res.text();
+  if (res.ok && html) {
+    document.write(html);
+  }
+})();
+</script><script>
+(async () => {
+  const zone = 'DEEPGAINGAIN1-CRYPTO-GITHUB-IO_ADZONE1_728X90';
+  const res = await fetch('https://highpay-ads.com/serve/' + zone);
+  const html = await res.text();
+  if (res.ok && html) {
+    document.write(html);
+  }
+})();
+</script><script>
+(async () => {
+  const zone = 'DEEPGAINGAIN1-CRYPTO-GITHUB-IO_ADZONE1_728X90';
+  const res = await fetch('https://highpay-ads.com/serve/' + zone);
+  const html = await res.text();
+  if (res.ok && html) {
+    document.write(html);
+  }
+})();
+</script><script>
+(async () => {
+  const zone = 'DEEPGAINGAIN1-CRYPTO-GITHUB-IO_ADZONE1_728X90';
+  const res = await fetch('https://highpay-ads.com/serve/' + zone);
+  const html = await res.text();
+  if (res.ok && html) {
+    document.write(html);
+  }
+})();
+</script>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
 
 </body>
                        </html>
