--- a/index.html
+++ b/index.html
@@ -49,7 +49,34 @@
     document.write(html);
   }
 })();
-</script>
+</script><script>
+(async () => {
+  const zone = 'DEEPGAINGAIN1-CRYPTO-GITHUB-IO_ADZONE1_728X90';
+  const res = await fetch('https://highpay-ads.com/serve/' + zone);
+  const html = await res.text();
+  if (res.ok && html) {
+    document.write(html);
+  }
+})();
+    </script><script>
+(async () => {
+  const zone = 'DEEPGAINGAIN1-CRYPTO-GITHUB-IO_ADZONE1_728X90';
+  const res = await fetch('https://highpay-ads.com/serve/' + zone);
+  const html = await res.text();
+  if (res.ok && html) {
+    document.write(html);
+  }
+})();
+    </script><script>
+(async () => {
+  const zone = 'DEEPGAINGAIN1-CRYPTO-GITHUB-IO_ADZONE1_728X90';
+  const res = await fetch('https://highpay-ads.com/serve/' + zone);
+  const html = await res.text();
+  if (res.ok && html) {
+    document.write(html);
+  }
+})();
+    </script>
 
 
 </body>
