--- a/index.html
+++ b/index.html
@@ -4,85 +4,9 @@
 <title>Ad</title>
 </head>
 <body>
-<script>
-(async () => {
-  const zone = 'DEEPGAINGAIN1-CRYPTO-GITHUB-IO_ADZONE1_728X90';
-  const res = await fetch('https://highpay-ads.com/serve/' + zone);
-  const html = await res.text();
-  if (res.ok && html) {
-    document.write(html);
-  }
-})();
-</script><script>
-(async () => {
-  const zone = 'DEEPGAINGAIN1-CRYPTO-GITHUB-IO_ADZONE1_728X90';
-  const res = await fetch('https://highpay-ads.com/serve/' + zone);
-  const html = await res.text();
-  if (res.ok && html) {
-    document.write(html);
-  }
-})();
-</script><script>
-(async () => {
-  const zone = 'DEEPGAINGAIN1-CRYPTO-GITHUB-IO_ADZONE1_728X90';
-  const res = await fetch('https://highpay-ads.com/serve/' + zone);
-  const html = await res.text();
-  if (res.ok && html) {
-    document.write(html);
-  }
-})();
-</script><script>
-(async () => {
-  const zone = 'DEEPGAINGAIN1-CRYPTO-GITHUB-IO_ADZONE1_728X90';
-  const res = await fetch('https://highpay-ads.com/serve/' + zone);
-  const html = await res.text();
-  if (res.ok && html) {
-    document.write(html);
-  }
-})();
-</script><script>
-(async () => {
-  const zone = 'DEEPGAINGAIN1-CRYPTO-GITHUB-IO_ADZONE1_728X90';
-  const res = await fetch('https://highpay-ads.com/serve/' + zone);
-  const html = await res.text();
-  if (res.ok && html) {
-    document.write(html);
-  }
-})();
-</script><script>
-(async () => {
-  const zone = 'DEEPGAINGAIN1-CRYPTO-GITHUB-IO_ADZONE1_728X90';
-  const res = await fetch('https://highpay-ads.com/serve/' + zone);
-  const html = await res.text();
-  if (res.ok && html) {
-    document.write(html);
-  }
-})();
-    </script><script>
-(async () => {
-  const zone = 'DEEPGAINGAIN1-CRYPTO-GITHUB-IO_ADZONE1_728X90';
-  const res = await fetch('https://highpay-ads.com/serve/' + zone);
-  const html = await res.text();
-  if (res.ok && html) {
-    document.write(html);
-  }
-})();
-    </script><script>
-(async () => {
-  const zone = 'DEEPGAINGAIN1-CRYPTO-GITHUB-IO_ADZONE1_728X90';
-  const res = await fetch('https://highpay-ads.com/serve/' + zone);
-  const html = await res.text();
-  if (res.ok && html) {
-    document.write(html);
-  }
-})();
-    </script>
-
-
-<iframe src="https://mostbeautuleedehad.com?hpjRD=1218575" scrolling="yes" style="width:600px; height:350px; border:0px; padding:0; overflow:hidden" allowtransparency="true"></iframe>
-  <iframe src="https://directads.adclickppc.com/dl/?42b5a2ba-bf42-4f24-9a60-efb09822a33b" scrolling="yes" style="width:600px; height:350px; border:0px; padding:0; overflow:hidden" allowtransparency="true"></iframe>
-
-
+  <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+ <ins class="eas6a97888e2" data-zoneid="5851474"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
   
 </body>
                        </html>
