--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
  <ins class="eas6a97888e2" data-zoneid="5851476"></ins> 
  <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
 
-
+<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+ <ins class="eas6a97888e2" data-zoneid="5851484"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+  <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+ <ins class="eas6a97888e2" data-zoneid="5851484"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
 
 
 
