--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
   <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
  <ins class="eas6a97888e2" data-zoneid="5851476"></ins> 
  <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+ <ins class="eas6a97888e2" data-zoneid="5851476"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+ <ins class="eas6a97888e2" data-zoneid="5851476"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+
+
 
 
 
