--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
 <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
 <ins class="eas6a97888e2" data-zoneid="5851474"></ins> 
 <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+</div>  
+
+  <div style="display:inline-block;">
+<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+<ins class="eas6a97888e2" data-zoneid="5851474"></ins> 
+<script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+  </div>
+  
+<div style="display:inline-block;">
+<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+<ins class="eas6a97888e2" data-zoneid="5851474"></ins> 
+<script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
 </div>
 
 <div style="display:inline-block;">
