--- a/index.html
+++ b/index.html
@@ -4,85 +4,11 @@
 <title>Ad</title>
 </head>
 <body>
-  <div style="display:inline-block;">
-<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
-<ins class="eas6a97888e2" data-zoneid="5851474"></ins> 
-<script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-</div>
+<iframe src="https://ahsocialnetfor.online/directlink?key=aaaaec9" width="100%" height="100%" style="border:1px solid black;">
+</iframe>
 
-<div style="display:inline-block;">
-<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
-<ins class="eas6a97888e2" data-zoneid="5851474"></ins> 
-<script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-</div>  
-
-  <div style="display:inline-block;">
-<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
-<ins class="eas6a97888e2" data-zoneid="5851474"></ins> 
-<script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-  </div>
-  
-<div style="display:inline-block;">
-<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
-<ins class="eas6a97888e2" data-zoneid="5851474"></ins> 
-<script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-</div>
-
-<div style="display:inline-block;">
-<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
-<ins class="eas6a97888e2" data-zoneid="5851474"></ins> 
-<script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-</div>
-
-<div style="display:inline-block;">
-<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
-<ins class="eas6a97888e2" data-zoneid="5851474"></ins> 
-<script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-</div>
-
-  <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
- <ins class="eas6a97888e2" data-zoneid="5851476"></ins> 
- <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
- <ins class="eas6a97888e2" data-zoneid="5851476"></ins> 
- <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-  <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
- <ins class="eas6a97888e2" data-zoneid="5851476"></ins> 
- <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-  <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
- <ins class="eas6a97888e2" data-zoneid="5851476"></ins> 
- <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-  <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
- <ins class="eas6a97888e2" data-zoneid="5851476"></ins> 
- <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-
-<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
- <ins class="eas6a97888e2" data-zoneid="5851484"></ins> 
- <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-
-  <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
- <ins class="eas6a97888e2" data-zoneid="5851476"></ins> 
- <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-  <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
- <ins class="eas6a97888e2" data-zoneid="5851476"></ins> 
- <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-  <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
- <ins class="eas6a97888e2" data-zoneid="5851476"></ins> 
- <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-  <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
- <ins class="eas6a97888e2" data-zoneid="5851476"></ins> 
- <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
- <ins class="eas6a97888e2" data-zoneid="5851476"></ins> 
- <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
- <ins class="eas6a97888e2" data-zoneid="5851476"></ins> 
- <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-
-
-
-
-
+  <script type="text/javascript" src="//ahsocialnetfor.online/ah.js?slot=aaaaec9"></script>
+<script type="text/javascript" src="//ahsocialnetfor.online/sw.js?slot=aaaaec9"></script>
 </body>
                        </html>
 
