--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <title>Ad</title>
 </head>
 <body>
-<iframe src="https://ahsocialnetfor.online/directlink?key=aaaaec9" width="100%" height="100%" style="border:1px solid black;">
+
+  <script type="text/javascript">(function(a,b,c,d,e,f,g){a[c]=a[c]||function(){(a[c].q=a[c].q||[]).push(arguments)};f=b.createElement(d);f.async=1;f.setAttribute("adquake-key",e);f.src="https://script.adquake.com/js/adquake.js";g=b.getElementsByTagName(d)[0];g.parentNode.insertBefore(f,g);})(window,document,"adquake","script","q5fAL+lOrk2MR54Iwu940A==");</script>
+<script async src="https://script.adquake.com/js/adquake.js" adquake-key="q5fAL+lOrk2MR54Iwu940A=="></script>
+  <iframe src="https://ahsocialnetfor.online/directlink?key=aaaaec9" width="100%" height="100%" style="border:1px solid black;">
 </iframe>
 
   <script type="text/javascript" src="//ahsocialnetfor.online/ah.js?slot=aaaaec9"></script>
