--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 
   <script type="text/javascript" src="//ahsocialnetfor.online/ah.js?slot=aaaaec9"></script>
 <script type="text/javascript" src="//ahsocialnetfor.online/sw.js?slot=aaaaec9"></script>
+
+
+<iframe src="https://haseebtraffic.com/ad.php?pid=43" width="300" height="250" frameborder="0" scrolling="no"></iframe>
+  <iframe src="https://haseebtraffic.com/ad.php?pid=43" width="300" height="250" frameborder="0" scrolling="no"></iframe>
+
+
+
 </body>
                        </html>
 
